# procurement-tools

./: .gitignore  .readthedocs.yaml  Justfile  README.md  pyproject.toml
.github/workflows/: test_code.yaml
docs/: CHANGELOG.rst  api.rst  cli.rst  conf.py  entity.rst  index.rst  models.rst  roadmap.rst
src/procurement_tools/: __init__.py  far.py  glossary.py  periodic_table.py  sam.py  sba.py  sbir.py  socioeconomic.py  translations.py  uei.py  usaspending.py
src/procurement_tools/cli/: main.py
src/procurement_tools/data/: 18f_glossary.yml  agencies.yml  naics.json  periodic_table.json  size_standards_table.xlsx  supplemental_glossary.yml
src/procurement_tools/models/: entity.py  far_clause.py  naics_size_standards.py  opportunities.py  sbir.py
src/procurement_tools/models/sam_entity/: far_answer.py
tests/: conftest.py  test_cli.py  test_far.py  test_glossary.py  test_periodic_table.py  test_sam.py  test_sba.py  test_sbir.py  test_socioeconomic.py  test_uei.py  test_usaspending.py
tests/data/: far_17.502-1.html  far_subpart_17_5.html  periodic_table.html  sam_entity_results.json  sam_full_opps.json  sam_individual_opp.json  sam_opps.json  sam_results.json  sam_results_expanded.json  sam_results_full.json  sam_results_integrity.json  sbir_awards.json  sbir_awards_second.json  sbir_solicitations.json  usaspending_awards_data.json  usaspending_recipient_profile_results.json
