[tool.poetry]
name = "procurement-tools"
version = "0.1.3a"
description = "Python tools for navigating federal contracting"
authors = ["V. David Zvenyach <dave@tandemgov.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["packaging", "poetry"]
homepage = "https://pypi.org/project/procurement-tools/"
repository = "https://github.com/tandemgov/procurement-tools"
documentation = "https://procurement-tools.readthedocs.io/en/latest/"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
ipdb = "^0.13.13"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-autodoc2 = "^0.4.2"
sphinx-rtd-theme = "^1.3.0"

[tool.pytest.ini_options]
pythonpath = "src"


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
requests = "^2.31.0"
cssselect = "^1.2.0"
beautifulsoup4 = "^4.12.2"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
