[tool.poetry]
name = "procurement-tools"
version = "0.2.0"
description = "Python tools for navigating federal contracting"
authors = ["V. David Zvenyach <dave@tandemgov.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["packaging", "poetry"]
homepage = "https://pypi.org/project/procurement-tools/"
repository = "https://github.com/tandemgov/procurement-tools"
documentation = "https://procurement-tools.readthedocs.io/en/latest/"

[tool.poetry.scripts]
fargo = 'procurement_tools.cli.main:app'

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
tox = "^4.11.4"
pytest-mock = "^3.12.0"
respx = "^0.20.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.2"
myst-parser = "^2.0.0"
sphinx-autodoc2 = "^0.4.2"
sphinx-rtd-theme = "^1.3.0"
autodoc-pydantic = "^2.0.1"
keyrings-alt = "^5.0.0"
sphinx-click = "^5.1.0"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.5.1"
requests = "^2.31.0"
cssselect = "^1.2.0"
beautifulsoup4 = "^4.12.2"
httpx = "^0.25.2"
keyring = "^24.3.0"
typer = "^0.9.0"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """

[tox]
skipsdist = True
isolated_build = true
env_list = py{38,39,310,311,312}

[testenv]
allowlist_externals = poetry
commands_pre =
    poetry install -v
commands =
    poetry run pytest tests/ --import-mode importlib
"""
